         returned when cancel is selected (patch #3083619) (Gergely Szasz).
20101009 disk/{beta.c,disk.[ch],opus.c,plusd.c},if1.c,machines/specplus3.c,
         man/fuse.1,menu.c,menu_data.dat,ui.c,ui/ui.h: change "Eject and write"
         menu items to "Save" and "Save as" (patch #3083639) (Gergely Szasz).
20101010 configure.in: pad version number for Win32 if needed (patch #3084574)
         (Sergio Baldovi).
20101011 ui/gtk/gtkdisplay.c: resize window when machine selection switches
         between Timex and non-Timex modes (fixes bug #3084862) (thanks, Phil)
         (Fred).
20101025 memory.c: writable_roms preference shouldn't affect the 16K machine
         "empty" page (thanks, Andrew Owen) (Fred).
20101029 man/fuse.1: some updates to bring things a bit more up to date (Fred).
20101102 man/fuse.1: remove reference to fixed issue in RZX playback command
         line ordering (patch #3100707) (Sergio Baldovi).
20101129 ui/fb/fbdisplay.c: only call fbdisplay_end() when display is
         initialised (fixes bug #3119382) (rkd77).
20101129 ChangeLog,README,man/fuse.1: more 1.0 updates.
20101203 ui/fb/fbdisplay.c: improve fb colour handling and initialise scaler
         system (fixes bugs #3124787 and #3124788) (rkd77).
20101216 ChangeLog,README,configure.in,man/fuse.1: update for 1.0.0 release.
20101217 keysyms.pl: fix SVGAlib compilation (rkd77).
20101229 debugger/breakpoint.c: don't free temporary breakpoint until after we have run
         it (fixes bug #3084862) (thanks, Chris Cowley) (Fred).
20101230 debugger/breakpoint.c: stop evaluating breakpoints when we have hit a
         temporary breakpoint (really fixes bug #3084862) (patch #3142840)
         (Sergio Baldovi).
20110101 debugger/breakpoint.c: evaluate all breakpoints again, but store the
         next breakpoint before deleteing the current one from the list 
         (really really fixes bug #3084862) (thanks, Phil) (Fred).