@@ -3381,3 +3381,4 @@
 20110101 debugger/breakpoint.c: evaluate all breakpoints again, but store the
          next breakpoint before deleteing the current one from the list 
          (really really fixes bug #3084862) (thanks, Phil) (Fred).
+20110109 ui/widget/filesel.c: make Amiga work again (Chris Young).
